<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/reps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/repsHint"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:nextFocusRight="@+id/weight"
        android:selectAllOnFocus="true"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/weightKgHint"
        android:imeOptions="actionNext"
        android:inputType="numberDecimal"
        android:nextFocusRight="@+id/time"
        android:selectAllOnFocus="true"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/timeHint"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:textAlignment="center" />
</LinearLayout>
